--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/ahorcado/css/styles.css" rel="stylesheet"/>
-        <link href="/ahorcado/css/ahorcado.css" rel="stylesheet" />
-
+        <link href="css/styles.css" rel="stylesheet"/>
+        <link href="css/ahorcado.css" rel="stylesheet" />
     </head>
     <body id="inicio">
         <!-- Masthead-->
@@ -38,14 +37,14 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
                         <div class="ahorcado">
-                            <img class="imagen" src="/ahorcado/assets/img/base.svg" alt="Base Ahorcado">
-                            <img id="img1" class="imagen" src="/ahorcado/assets/img/1.svg" alt="Soga">
-                            <img id="img2" class="imagen" src="/ahorcado/assets/img/2.svg" alt="Cabeza">
-                            <img id="img3" class="imagen" src="/ahorcado/assets/img/3.svg" alt="Cuerpo">
-                            <img id="img4" class="imagen" src="/ahorcado/assets/img/4.svg" alt="Brazo Derecho">
-                            <img id="img5" class="imagen" src="/ahorcado/assets/img/5.svg" alt="Brazo Izquierdo">
-                            <img id="img6" class="imagen" src="/ahorcado/assets/img/6.svg" alt="Pierna Derecha">
-                            <img id="img7" class="imagen" src="/ahorcado/assets/img/7.svg" alt="Pierna Izquierda">
+                            <img class="imagen" src="/assets/img/base.svg" alt="Base Ahorcado">
+                            <img id="img1" class="imagen" src="/assets/img/1.svg" alt="Soga">
+                            <img id="img2" class="imagen" src="/assets/img/2.svg" alt="Cabeza">
+                            <img id="img3" class="imagen" src="/assets/img/3.svg" alt="Cuerpo">
+                            <img id="img4" class="imagen" src="/assets/img/4.svg" alt="Brazo Derecho">
+                            <img id="img5" class="imagen" src="/assets/img/5.svg" alt="Brazo Izquierdo">
+                            <img id="img6" class="imagen" src="/assets/img/6.svg" alt="Pierna Derecha">
+                            <img id="img7" class="imagen" src="/assets/img/7.svg" alt="Pierna Izquierda">
                         </div>
                         <input type="text" id="texto" onkeyup="mayusculas(this);">
                     </div>
@@ -59,7 +58,6 @@
                 </div>
             </div>
         </section>
-        
     </body>
     <footer class="text-white text-center" style="background-color: #23242a;">
         <!-- Grid container -->
@@ -81,7 +79,5 @@
             <a class="text-white" href="https://acamus79.github.io">acamus79</a>
         </div>
     </footer>
-
-    <script src="/ahorcado/js/game.js"></script>
-  
+    <script src="js/game.js"></script>
 </html>
