--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="Adrian E. Camus" />
+        <meta name="author" content="Adrian E. Camus"/>
         <title>El Ahorcado</title>
         <link rel="icon" type="image/x-icon" href="assets/ahorcado.ico"/>
         <!-- Font Awesome icons (free version)-->
@@ -15,8 +15,8 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet"/>
-        <link href="css/ahorcado.css" rel="stylesheet" />
+        <link href="/css/styles.css" rel="stylesheet"/>
+        <link href="/css/ahorcado.css" rel="stylesheet" />
     </head>
     <body id="inicio">
         <!-- Masthead-->
@@ -32,12 +32,12 @@
             </div>
         </header>
         <!-- Juego -->
-        <section class="juego-section text-center" id="juego">
-            <div class="container px-4 px-lg-5">
+        <section class="juego-section text-center">
+            <div class="container px-4 px-lg-5" id="juego">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
+                    <div class="col-lg-10">
                         <div class="ahorcado">
-                            <img class="imagen" src="/assets/img/base.svg" alt="Base Ahorcado">
+                            <img class="imagen" id="fondo" src="/assets/img/base.svg" alt="Base Ahorcado">
                             <img id="img1" class="imagen" src="/assets/img/1.svg" alt="Soga">
                             <img id="img2" class="imagen" src="/assets/img/2.svg" alt="Cabeza">
                             <img id="img3" class="imagen" src="/assets/img/3.svg" alt="Cuerpo">
@@ -45,6 +45,7 @@
                             <img id="img5" class="imagen" src="/assets/img/5.svg" alt="Brazo Izquierdo">
                             <img id="img6" class="imagen" src="/assets/img/6.svg" alt="Pierna Derecha">
                             <img id="img7" class="imagen" src="/assets/img/7.svg" alt="Pierna Izquierda">
+                            <img id="img8" class="imagen" src="/assets/img/winner.svg" alt="Ganador">
                         </div>
                         <input type="text" id="texto" onkeyup="mayusculas(this);">
                     </div>
@@ -79,5 +80,5 @@
             <a class="text-white" href="https://acamus79.github.io">acamus79</a>
         </div>
     </footer>
-    <script src="js/game.js"></script>
+    <script src="/js/game.js"></script>
 </html>
